syntax = "proto3";

package sailet_api;

message LoginRequest {
    string email = 1;
    string password = 2;
}

message Account {
    string email = 1;
    string password = 2;
    string info = 3;
}

message ItemAccount {
    repeated Account items = 1;
}

message GetRequest{
    string email = 1;
}

message DeletResponce{
    bool message = 1;
}

message UpdateResponce{
    bool message = 1;
}


message Empty {

}

service AccountService {
    rpc Login(LoginRequest) returns (Account) {}

    rpc Get(GetRequest) returns (Account) {}

    rpc GetAll(Empty) returns (ItemAccount) {}

    rpc Create(Account) returns (Account) {}

    rpc Update(Account) returns (UpdateResponce) {}

    rpc Delet(Account) returns (DeletResponce){}
}